removed old sections

--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{profile}
 \name{Cory}{Maloy}
-\position{Software Engineer{\enskip\cdotp\enskip}Philosopher}
+\position{Full Stack Software Engineer{\enskip\cdotp\enskip}Philosopher}
 \address{21167 NW Galice Lane Apt. 308, Portland Oregon, 97229 USA}
 \mobile{(+1) 541-315-0057}
 \email{corymaloy@hotmail.com}
@@ -42,11 +42,6 @@
 
 \input{resume/summary.tex}
 \input{resume/experience.tex}
-\input{resume/honors.tex}
-\input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
 \input{resume/education.tex}
-\input{resume/extracurricular.tex}
 
 \end{document}
