--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,85 +1,88 @@
-%-------------------------------------------------------------------------------
-%	SECTION TITLE
-%-------------------------------------------------------------------------------
-\cvsection{Work Experience}
+\cvsection{Experience}
 
-
-%-------------------------------------------------------------------------------
-%	CONTENT
-%-------------------------------------------------------------------------------
 \begin{cventries}
 
-%---------------------------------------------------------
   \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - PRESENT} % Date(s)
+  {Full Stack Software Engineer}
+  {Nike - Go To Market}
+  {Portland Oregon}
+  {March 2017 - Present}
+  {
+    \begin{cvitems}
+      \item {Responsible for building software that enables organization, distribution, and regional availability of Nike products worldwide.}
+      \item {Primary technologies: React, Node, Java}
+    \end{cvitems}
+  }
+
+  \cventry
+  {Full Stack Software Engineer}
+  {Tek Systems}
+  {Portland Oregon}
+  {March 2017 - Present}
+  {}
+
+  \cventry
+  {Software Developer III}
+  {Catalyst DevWorks}
+  {Portland Oregon}
+  {July 2016 - March 2017}
+  {}
+
+  \cventry
+    {Software Developer III}
+    {Choice Hotels International - Edge Connect}
+    {Phoenix Arizona}
+    {March 2016 - March 2017}
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+      \begin{cvitems}
+        \item {Built the portal to Choice's new central reservation system as part of a contracted team.}
+        \item {Was the first person on the team to be in the code, and was tasked with the general design and layout of the project, setting up all the build process, pipelines, linters, stylguides, transpilers, testing frameworks, etc.}
+        \item {Created an open source npm module (gulp-json-translator) to handle language translation for all strings within the app into any number of other languages}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
   \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
+    {Software Developer II}
+    {Catalyst DevWorks}
+    {Portland Oregon}
+    {November 2015 - June 2016}
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
+      \begin{cvitems}
+        \item {Tasked with additional leadership responsibilities including participation in leadership meetings and mentoring of junior developers.}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
   \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+    {Software Developer II}
+    {Choice Hotels International - Vacation Rentals}
+    {Phoenix Arizona}
+    {June 2015 - March 2016}
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+      \begin{cvitems}
+        \item {Built the portal for Choice's new venture into Vacation Rental markets as part of a contracted team.}
+        \item {Consistently met deadlines and client requirements}
+        \item {Primary technologies: Angular, Bootstrap, Gulp, Java, Karma, Less, Node, Spring.}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
   \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp. (Start-up company)} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
+    {Software Developer I}
+    {Catalyst DevWorks}
+    {Portland Oregon}
+    {May 2015 - October 2015}
+    {}
+
+  \cventry
+    {Associate Developer}
+    {Catalyst DevWorks}
+    {Portland Oregon}
+    {January 2015 - April 2015}
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
-        \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
+      \begin{cvitems}
+        \item {Participated full time intensive training to become an enterprise level Software Developer.}
+        \item {Simulated real work environments via immersion in technologies and processes including: Java, SQL, Javascript, Node, CSS, HTML, Agile, RESTful Web Services, Git, npm}
+        \item {Completed capstone assessment leading to a full time role as a Software Developer.}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
-
-%---------------------------------------------------------
 \end{cventries}
