--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,8 +9,8 @@
   {March 2017 - Present}
   {
     \begin{cvitems}
-      \item {Responsible for building software that enables organization, distribution, and regional availability of Nike products worldwide.}
-      \item {Primary technologies: React, Node, Java}
+      \item {Responsible for building software that enables organization, distribution, and regional availability of hundreds of thousands of Nike products worldwide.}
+      \item {Primary technologies: React, Node, Java, SQL, Web Components, AWS, }
     \end{cvitems}
   }
 
