--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Co-founder \& Software Engineer in start-up company PLAT Corp. 5+ years experience specializing in backend/infrastructure, web development and computer security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+Experienced full stack software engineer with over 3 years of enterprise software experience, resulting in several successfully completed projects and happy clients. Knowledgeable in most of today's popular technologies, especially React, Node, and Angular. I also have a passion for the Go programming language, and am always looking for ways to use it. Able to work independently or as a member of a team to effectively produce results and meet client expectations. I am a quick learner with drive and passion to succeed in almost any scenario. I’m looking for opportunities to learn new technologies, grow, and perfect my craft.
 \end{cvparagraph}
