--- a/resume/education.tex
+++ b/resume/education.tex
@@ -11,13 +11,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Exp. Aug. 2017} % Date(s)
+    {B.S. in History of Philosophy} % Degree
+    {Oregon State University} % Institution
+    {Corvallis, Oregon} % Location
+    {2009 - 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Studied the history of Philosophy with particular interest in how it applies to Computer Science and machine learning. I wrote my capstone paper on Alan Turing and his work.}
       \end{cvitems}
     }
 
