--- a/resume.tex
+++ b/resume.tex
@@ -24,11 +24,11 @@
 \address{21167 NW Galice Lane Apt. 308, Portland Oregon, 97229 USA}
 \mobile{(+1) 541-315-0057}
 \email{corymaloy@hotmail.com}
-\homepage{www.corymaloy.com}
+%\homepage{www.corymaloy.com}
 \github{Chloro}
 \linkedin{cory-maloy}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
 
 \begin{document}
 \makecvheader[C]
