--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -10,7 +10,7 @@
   {
     \begin{cvitems}
       \item {Responsible for building software that enables organization, distribution, and regional availability of hundreds of thousands of Nike products worldwide.}
-      \item {Primary technologies: React, Node, Java, SQL, Web Components, AWS, }
+      \item {Primary technologies: React, Node, Java, SQL, Web Components, AWS, Webpack}
     \end{cvitems}
   }
 
@@ -61,7 +61,7 @@
       \begin{cvitems}
         \item {Built the portal for Choice's new venture into Vacation Rental markets as part of a contracted team.}
         \item {Consistently met deadlines and client requirements}
-        \item {Primary technologies: Angular, Bootstrap, Gulp, Java, Karma, Less, Node, Spring.}
+        \item {Primary technologies: Angular, Bootstrap, Gulp, Java, Karma, Less, Node, Spring}
       \end{cvitems}
     }
 
