--- a/resume/education.tex
+++ b/resume/education.tex
@@ -17,7 +17,7 @@
     {2009 - 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Studied the history of Philosophy with particular interest in how it applies to Computer Science and machine learning. I wrote my capstone paper on Alan Turing and his work.}
+        \item {Studied the history of Philosophy with particular interest in how it applies to Computer Science and machine learning. My capstone paper was on Alan Turing and his work.}
       \end{cvitems}
     }
 
