--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -5,7 +5,7 @@
   \cventry
   {Full Stack Software Engineer}
   {Nike - Go To Market}
-  {Portland Oregon}
+  {Portland, Oregon}
   {March 2017 - Present}
   {
     \begin{cvitems}
@@ -17,26 +17,26 @@
   \cventry
   {Full Stack Software Engineer}
   {Tek Systems}
-  {Portland Oregon}
+  {Portland, Oregon}
   {March 2017 - Present}
   {}
 
   \cventry
   {Software Developer III}
   {Catalyst DevWorks}
-  {Portland Oregon}
+  {Portland, Oregon}
   {July 2016 - March 2017}
   {}
 
   \cventry
     {Software Developer III}
     {Choice Hotels International - Edge Connect}
-    {Phoenix Arizona}
+    {Phoenix, Arizona}
     {March 2016 - March 2017}
     {
       \begin{cvitems}
         \item {Built the portal to Choice's new central reservation system as part of a contracted team.}
-        \item {Was the first person on the team to be in the code, and was tasked with the general design and layout of the project, setting up all the build process, pipelines, linters, stylguides, transpilers, testing frameworks, etc.}
+        \item {Was the first person on the team to be in the code, and was tasked with the general design and layout of the project, setting up all the build process, pipelines, linters, styleguides, transpilers, testing frameworks, etc.}
         \item {Created an open source npm module (gulp-json-translator) to handle language translation for all strings within the app into any number of other languages}
       \end{cvitems}
     }
@@ -44,7 +44,7 @@
   \cventry
     {Software Developer II}
     {Catalyst DevWorks}
-    {Portland Oregon}
+    {Portland, Oregon}
     {November 2015 - June 2016}
     {
       \begin{cvitems}
@@ -55,7 +55,7 @@
   \cventry
     {Software Developer II}
     {Choice Hotels International - Vacation Rentals}
-    {Phoenix Arizona}
+    {Phoenix, Arizona}
     {June 2015 - March 2016}
     {
       \begin{cvitems}
@@ -68,14 +68,14 @@
   \cventry
     {Software Developer I}
     {Catalyst DevWorks}
-    {Portland Oregon}
+    {Portland, Oregon}
     {May 2015 - October 2015}
     {}
 
   \cventry
     {Associate Developer}
     {Catalyst DevWorks}
-    {Portland Oregon}
+    {Portland, Oregon}
     {January 2015 - April 2015}
     {
       \begin{cvitems}
