minor tweaks based on feedback.

--- a/resume.tex
+++ b/resume.tex
@@ -38,7 +38,8 @@
 \makecvfooter
   {\today}
   {Cory R. Maloy~~~·~~~Résumé}
-  {\thepage}
+  {}
+%  {\thepage} // page #
 
 \input{resume/summary.tex}
 \input{resume/experience.tex}
