--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,30 +3,46 @@
 \begin{cventries}
 
   \cventry
+  {Senior Backend Engineer}
+  {Cambia Health Solutions - Healthpass}
+  {Portland, Oregon}
+  {April 2018 - Present}
+  {
+    \begin{cvitems}
+      \item {Responsible for building the payment system for Healthpass - an internally incubated "startup within the company" hosted by Cambia's own Innovation Force}
+      \item {Primary technologies: Postgres, Node, and various AWS services}
+    \end{cvitems}
+  }
+
+  ~
+
+  \cventry
   {Full Stack Software Engineer}
   {Nike - Go To Market}
   {Portland, Oregon}
-  {March 2017 - Present}
+  {March 2017 - April 2018}
   {
     \begin{cvitems}
-      \item {Responsible for building software that enables organization, distribution, and regional availability of hundreds of thousands of Nike products worldwide.}
+      \item {Built software to enable organization, distribution, and regional availability of hundreds of thousands of Nike products worldwide}
       \item {Primary technologies: React, Node, Java, SQL, Web Components, AWS, Webpack}
     \end{cvitems}
   }
 
-  \cventry
-  {Full Stack Software Engineer}
-  {Tek Systems}
-  {Portland, Oregon}
-  {March 2017 - Present}
-  {}
+  ~
 
-  \cventry
-  {Software Developer III}
-  {Catalyst DevWorks}
-  {Portland, Oregon}
-  {July 2016 - March 2017}
-  {}
+%  \cventry
+%  {Full Stack Software Engineer}
+%  {Tek Systems}
+%  {Portland, Oregon}
+%  {March 2017 - Present}
+%  {}
+
+%  \cventry
+%  {Software Developer III}
+%  {Catalyst DevWorks}
+%  {Portland, Oregon}
+%  {July 2016 - March 2017}
+%  {}
 
   \cventry
     {Software Developer III}
@@ -36,21 +52,23 @@
     {
       \begin{cvitems}
         \item {Built the portal to Choice's new central reservation system as part of a contracted team.}
-        \item {Was the first person on the team to be in the code, and was tasked with the general design and layout of the project, setting up all the build process, pipelines, linters, styleguides, transpilers, testing frameworks, etc.}
+        \item {Was the first person on the team to be in the code, and was tasked with the general design and layout of the project, setting up all the build process, pipelines, linters, styleguides, transpilers, testing frameworks, etc...}
         \item {Created an open source npm module (gulp-json-translator) to handle language translation for all strings within the app into any number of other languages}
       \end{cvitems}
     }
 
-  \cventry
-    {Software Developer II}
-    {Catalyst DevWorks}
-    {Portland, Oregon}
-    {November 2015 - June 2016}
-    {
-      \begin{cvitems}
-        \item {Tasked with additional leadership responsibilities including participation in leadership meetings and mentoring of junior developers.}
-      \end{cvitems}
-    }
+  ~
+
+%  \cventry
+%    {Software Developer II}
+%    {Catalyst DevWorks}
+%    {Portland, Oregon}
+%    {November 2015 - June 2016}
+%    {
+%      \begin{cvitems}
+%        \item {Tasked with additional leadership responsibilities including participation in leadership meetings and mentoring of %junior developers.}
+%      \end{cvitems}
+%    }
 
   \cventry
     {Software Developer II}
@@ -59,30 +77,45 @@
     {June 2015 - March 2016}
     {
       \begin{cvitems}
-        \item {Built the portal for Choice's new venture into Vacation Rental markets as part of a contracted team.}
+        \item {Built the portal for Choice's new venture into Vacation Rental markets as part of a contracted team}
         \item {Consistently met deadlines and client requirements}
         \item {Primary technologies: Angular, Bootstrap, Gulp, Java, Karma, Less, Node, Spring}
       \end{cvitems}
     }
 
-  \cventry
-    {Software Developer I}
-    {Catalyst DevWorks}
-    {Portland, Oregon}
-    {May 2015 - October 2015}
-    {}
+  ~
+
+%  \cventry
+%    {Software Developer I}
+%    {Catalyst DevWorks}
+%    {Portland, Oregon}
+%    {May 2015 - October 2015}
+%    {}
 
   \cventry
-    {Associate Developer}
-    {Catalyst DevWorks}
+    {Associate Developer - Sofware Developer III}
+    {Catalyte}
     {Portland, Oregon}
-    {January 2015 - April 2015}
+    {January 2015 - March 2017}
     {
       \begin{cvitems}
-        \item {Participated full time intensive training to become an enterprise level Software Developer.}
-        \item {Simulated real work environments via immersion in technologies and processes including: Java, SQL, Javascript, Node, CSS, HTML, Agile, RESTful Web Services, Git, npm}
-        \item {Completed capstone assessment leading to a full time role as a Software Developer.}
+        \item {Participated in a full time 5 month intensive training to become an enterprise level Software Developer}
+        \item {After training, was assigned to various projects as a contractor}
+        \item {Was quickly promoted for perfromance, from Associate Developer, to Developer I, to Developer II, and finally to Developer III}
       \end{cvitems}
     }
+
+%  \cventry
+%    {Associate Developer}
+%    {Catalyte}
+%    {Portland, Oregon}
+%    {January 2015 - April 2015}
+%    {
+%      \begin{cvitems}
+%        \item {Participated full time intensive training to become an enterprise level Software Developer.}
+%        \item {Simulated real work environments via immersion in technologies and processes including: Java, SQL, Javascript, Node, CSS, %HTML, Agile, RESTful Web Services, Git, npm}
+%        \item {Completed capstone assessment leading to a full time role as a Software Developer.}
+%      \end{cvitems}
+%    }
 
 \end{cventries}
