Added additional info.

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -3,13 +3,27 @@
 \begin{cventries}
 
   \cventry
+  {Founder}
+  {Qzap}
+  {Portland, Oregon}
+  {September 2018 - Present}
+  {
+    \begin{cvitems}
+      \item {Founded a small company with a very specific nich market for digital content and entertainment centered around personality quizzes}
+      \item {Primary technologies: Golang, Postgres, Protobuffer, GRPC, Kubernetes, Docker}
+    \end{cvitems}
+  }
+
+  ~
+
+  \cventry
   {Senior Backend Engineer}
   {Cambia Health Solutions - Healthpass}
   {Portland, Oregon}
   {April 2018 - Present}
   {
     \begin{cvitems}
-      \item {Responsible for building the payment system for Healthpass - an internally incubated "startup within the company" hosted by Cambia's own Innovation Force}
+      \item {Responsible for building many of the backend systems (including payment) for Healthpass - an internally incubated "startup within the company" hosted by Cambia's Innovation Force incubator}
       \item {Primary technologies: Postgres, Node, and various AWS services}
     \end{cvitems}
   }
