Updated resume, create cover letter.

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -29,7 +29,7 @@
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-skyblue}
 % Uncomment if you would like to specify your own color
 % \definecolor{awesome}{HTML}{CA63A8}
 
@@ -53,12 +53,12 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 \name{Cory}{Maloy}
-\position{Full Stack Software Engineer{\enskip\cdotp\enskip}Philosopher}
+\position{Senior Full Stack Software Engineer{\enskip\cdotp\enskip}Philosopher}
 \address{21167 NW Galice Lane Apt. 308, Portland Oregon, 97229 USA}
 \mobile{(+1) 541-315-0057}
 \email{corymaloy@hotmail.com}
 %\homepage{www.corymaloy.com}
-\github{Chloro}
+\github{chlorophant}
 \linkedin{cory-maloy}
 
 
@@ -69,17 +69,18 @@
 % The company being applied to
 \recipient
   {Company Recruitment Team}
-  {Google Inc.\\1600 Amphitheatre Parkway\\Mountain View, CA 94043}
+  {CBT Nuggets LLC\\550 Valley River Drive\\Eugene, OR 97401}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Software Engineer}
+\lettertitle{Job Application for Senior Software Engineer - Bend}
 % How the letter is opened
-\letteropening{Dear Mr./Ms./Dr. LastName,}
+\letteropening{Dear Hiring Manager,}
+
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
-\letterenclosure[Attached]{Curriculum Vitae}
+% \letterenclosure[Attached]{Curriculum Vitae}
 
 
 %-------------------------------------------------------------------------------
@@ -93,7 +94,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Cover Letter}
+  {Cory R. Maloy~~~·~~~Cover Letter}
   {}
 
 % Print the title with above letter informations
@@ -105,13 +106,13 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+I'm an experienced full stack software engineer with 5 years of enterprise software experience, resulting in several successfully completed projects and happy clients. I'm knowledgeable in most of today’s popular technologies, especially React, Node, Golang, Docker, Kubernetes, and various cloud provider APIs including AWS, Google Cloud, and Digital Ocean. Able to work independently or as a member of a team to effectively produce results and meet client expectations. I have a strong sense of responsibility and duty. I'm a quick learner with drive and passion to succeed in almost any scenario. I’m looking for opportunities to learn new technologies, grow, and perfect my craft. 
 
-\lettersection{Why Google?}
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+\lettersection{Why CBT Nuggets?}
+CBT Nuggets is a very appealing place for me, after spending the last two years building payment and billing services, dealing with very sensitive insurance claims data, and generally unhappy users (medical bills). I have a new appreciation for building simple solutions, with clear value propositions, which actually make users happy. I genuinely find the concept of helping fellow techies to learn complicated topics to be very attractive. I believe it will bring me a sense of fulfillment. Additionally, an old coworker has highly recommended CBT Nuggets as a great place to work, and I trust their assessment.
 
 \lettersection{Why Me?}
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+I've worked very hard to grow my career quickly. If you look at my resume, you will see I went from entry level to a senior engineer in about three years. That was not by chance, that was from sheer will, overtime, and dedication to perfecting my skills. I spent evenings and weekends learning in order to give me the edge in my job. I want to make sure you know that I am dedicated and hard working. I'm serious about improving myself and am constantly trying to become a "10x engineer". I'm not sure if I will ever reach that goal, but I do not intend to stop trying. I believe the attributes and skills I posses stand to benefit your organization and I hope you will consider my for the position.
 
 \end{cvletter}
 
