--- a/resume.tex
+++ b/resume.tex
@@ -25,7 +25,7 @@
 \mobile{(+1) 541-315-0057}
 \email{corymaloy@hotmail.com}
 %\homepage{www.corymaloy.com}
-\github{Chloro}
+\github{chlorophant}
 \linkedin{cory-maloy}
 
 %\quote{``Be the change that you want to see in the world."}
