--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -2,19 +2,19 @@
 
 \begin{cventries}
 
-  \cventry
-  {Founder}
-  {Qzap}
-  {Portland, Oregon}
-  {September 2018 - Present}
-  {
-    \begin{cvitems}
-      \item {Founded a small company with a very specific nich market for digital content and entertainment centered around personality quizzes}
-      \item {Primary technologies: Golang, Postgres, Protobuffer, GRPC, Kubernetes, Docker}
-    \end{cvitems}
-  }
+  % \cventry
+  % {Founder}
+  % {Qzap}
+  % {Portland, Oregon}
+  % {September 2018 - Present}
+  % {
+  %   \begin{cvitems}
+  %     \item {Founded a small company with a very specific nich market for digital content and entertainment centered around personality quizzes}
+  %     \item {Primary technologies: Golang, Postgres, Protobuffer, GRPC, Kubernetes, Docker}
+  %   \end{cvitems}
+  % }
 
-  ~
+  % ~
 
   \cventry
   {Senior Backend Engineer}
