--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Experienced full stack software engineer with 4 years of enterprise software experience, resulting in several successfully completed projects and happy clients. Knowledgeable in most of today's popular technologies, especially React, Node, Golang and Angular. I have a passion for the Go programming language, and am always looking for ways to use it. Able to work independently or as a member of a team to effectively produce results and meet client expectations. I am a quick learner with drive and passion to succeed in almost any scenario. I’m looking for opportunities to learn new technologies, grow, and perfect my craft.
+Experienced full stack software engineer with 5 years of enterprise software experience, resulting in several successfully completed projects and happy clients. Knowledgeable in most of today's popular technologies, especially React, Node, Golang, Docker, and Kubernetes. I have a passion for the Go programming language, and am always looking for ways to use it. Able to work independently or as a member of a team to effectively produce results and meet client expectations. I am a quick learner with drive and passion to succeed in almost any scenario. I’m looking for opportunities to learn new technologies, grow, and perfect my craft.
 \end{cvparagraph}
