Updated with more recent info.

--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 % \photo[rectangle,edge,right]{profile}
 \name{Cory}{Maloy}
 \position{Full Stack Software Engineer{\enskip\cdotp\enskip}Philosopher}
-\address{21167 NW Galice Lane Apt. 308, Portland Oregon, 97229 USA}
+\address{56243 Marsh Hawk Road, Bend Oregon, 97707 USA}
 \mobile{(+1) 541-315-0057}
 \email{corymaloy@hotmail.com}
 %\homepage{www.corymaloy.com}
