--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -17,14 +17,29 @@
   % ~
 
   \cventry
+  {Senior Engineer II}
+  {Echobind}
+  {Remote, PST}
+  {January 2021 - Present}
+  {
+    \begin{cvitems}
+      \item {Responsible for assessing client projects, estimating them, and then building them}
+      \item {Primary technologies: Node, React, Postgres, React Native, Graphql, Typescript}
+    \end{cvitems}
+  }
+
+  ~
+
+  \cventry
   {Senior Backend Engineer}
   {Cambia Health Solutions - Healthpass}
   {Portland, Oregon}
-  {April 2018 - Present}
+  {April 2018 - January 2021}
   {
     \begin{cvitems}
-      \item {Responsible for building many of the backend systems (including payment) for Healthpass - an internally incubated "startup within the company" hosted by Cambia's Innovation Force incubator}
-      \item {Primary technologies: Postgres, Node, and various AWS services}
+      \item {Built many of the backend systems (including payment) for Healthpass - an internally incubated "startup within the company" hosted by Cambia's Innovation Force incubator}
+      \item {Interviewed, hired, and mentored junior members of the team}
+      \item {Primary technologies: Postgres, Node, Go, Python, and various AWS services}
     \end{cvitems}
   }
 
@@ -44,20 +59,6 @@
 
   ~
 
-%  \cventry
-%  {Full Stack Software Engineer}
-%  {Tek Systems}
-%  {Portland, Oregon}
-%  {March 2017 - Present}
-%  {}
-
-%  \cventry
-%  {Software Developer III}
-%  {Catalyst DevWorks}
-%  {Portland, Oregon}
-%  {July 2016 - March 2017}
-%  {}
-
   \cventry
     {Software Developer III}
     {Choice Hotels International - Edge Connect}
@@ -72,17 +73,6 @@
     }
 
   ~
-
-%  \cventry
-%    {Software Developer II}
-%    {Catalyst DevWorks}
-%    {Portland, Oregon}
-%    {November 2015 - June 2016}
-%    {
-%      \begin{cvitems}
-%        \item {Tasked with additional leadership responsibilities including participation in leadership meetings and mentoring of %junior developers.}
-%      \end{cvitems}
-%    }
 
   \cventry
     {Software Developer II}
@@ -99,37 +89,17 @@
 
   ~
 
-%  \cventry
-%    {Software Developer I}
-%    {Catalyst DevWorks}
-%    {Portland, Oregon}
-%    {May 2015 - October 2015}
-%    {}
-
   \cventry
-    {Associate Developer - Sofware Developer III}
+    {Associate Developer -> Software Developer III}
     {Catalyte}
     {Portland, Oregon}
     {January 2015 - March 2017}
     {
       \begin{cvitems}
         \item {Participated in a full time 5 month intensive training to become an enterprise level Software Developer}
-        \item {After training, was assigned to various projects as a contractor}
-        \item {Was quickly promoted for perfromance, from Associate Developer, to Developer I, to Developer II, and finally to Developer III}
+        \item {After training, was assigned to various projects as a consultant}
+        \item {Was quickly promoted for performance, from Associate Developer, to Developer I, to Developer II, and finally to Developer III}
       \end{cvitems}
     }
-
-%  \cventry
-%    {Associate Developer}
-%    {Catalyte}
-%    {Portland, Oregon}
-%    {January 2015 - April 2015}
-%    {
-%      \begin{cvitems}
-%        \item {Participated full time intensive training to become an enterprise level Software Developer.}
-%        \item {Simulated real work environments via immersion in technologies and processes including: Java, SQL, Javascript, Node, CSS, %HTML, Agile, RESTful Web Services, Git, npm}
-%        \item {Completed capstone assessment leading to a full time role as a Software Developer.}
-%      \end{cvitems}
-%    }
 
 \end{cventries}
